# advent-of-code

./: README.md
2022/javascript/: common.js  index.js
2022/javascript/aoc-2022/: day-11-monkey-in-the-middle.js  day-9-rope-bridge.js
haskell/: advent-of-code-haskell.cabal
haskell/app/: Main.hs  Model.hs
haskell/app/AOC2015/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day06GPT.hs  Day07.hs  Day07GPT.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Module.hs
haskell/app/AOC2016/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Module.hs
haskell/app/AOC2017/: Day01.hs  Day02.hs  Module.hs
haskell/app/AOC2018/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Module.hs
haskell/app/AOC2019/: Day01.hs  Day02.hs  Module.hs
javascript/: package-lock.json  package.json
javascript/aoc-2022/: day-10-cathode-ray-tube.js  day-12-hill-climbing-algorithm.js  day-4-camp-cleanup.js
python/: .gitignore  main.py  requirements.txt
python/aoc2015/: Day06.py  Day11.py
python/aoc2018/: Day01.py
python/aoc2023/: Day08.py
python/aoc2024/: Day02.py  Day07.py
rust/: Cargo.toml
rust/src/: main.rs
rust/src/aoc2015/: day07.rs  mod.rs
rust/src/aoc2023/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day15.rs  day19.rs  day20.rs  mod.rs
rust/src/days/: day20.rs
rust/src/utils/: get_question_data.rs
unison/: README.md
(+52 files in other folders)
