[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
apply = "0.3.0"
dotenvy = "0.15.0"
itertools = "0.13.0"
num = "0.4.3"
rayon = "1.10.0"
reqwest = { version = "0.12.7", features = ["blocking"] }
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
