[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
apply = "0.3.0"
dotenvy = "0.15.0"
itertools = "0.14.0"
num = "0.4.3"
rayon = "1.11.0"
reqwest = { version = "0.12.24", features = ["blocking"] }
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
openssl = "0.10.75"
idna = "1.1.0"
ring = "0.17.14"
